--- a/src/scss/layout/_nav.scss
+++ b/src/scss/layout/_nav.scss
@@ -382,16 +382,16 @@ header{
                 }
             }
             .carts {
-    
+
                 background-color: $white-color;
                 z-index: 999;
                 position: absolute;
-                top: 75px;
+                top: 25px;
                 left: -80px;
                 display: none;
                 flex-direction: column;
                 width: 250px;
-                padding: 10px;
+                padding:50px 10px 10px;
                 .cart-item{
                     width: 100%;
                    margin: 5px 0;
