--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -17,4 +17,5 @@
 @import 'pages/home/home';
 @import 'pages/contact/contact';
 @import 'pages/productslist/productlist';
+@import 'pages/productcheck/productcheck';
 @import 'pages/extra/extra';
