--- a/src/scss/style.css
+++ b/src/scss/style.css
@@ -1836,6 +1836,64 @@ header .navbaractive {
   display: block;
 }
 
+#product_check {
+  padding: 60px 0;
+}
+#product_check .check_img {
+  margin-bottom: 20px;
+}
+#product_check .check_img img {
+  width: 100%;
+  height: 110px;
+  -o-object-fit: cover;
+     object-fit: cover;
+}
+#product_check .check_img_big img {
+  width: 100%;
+  height: 500px;
+  -o-object-fit: cover;
+     object-fit: cover;
+}
+
+#zoom_img .bodying {
+  padding: 0 !important;
+  max-width: 297px !important;
+}
+#zoom_img .bodying .img {
+  height: 384px;
+  width: 297px;
+  position: relative;
+}
+#zoom_img .bodying .img i {
+  position: absolute;
+  right: -20px;
+  top: -20px;
+  color: #fff;
+}
+#zoom_img .bodying .img img {
+  width: 100%;
+  height: 100%;
+}
+#zoom_img .bodying_second {
+  padding: 0 !important;
+  max-width: 465px !important;
+}
+#zoom_img .bodying_second .img {
+  height: 600px;
+  width: 465px;
+  position: relative;
+}
+#zoom_img .bodying_second .img i {
+  position: absolute;
+  right: -20px;
+  top: -20px;
+  color: #fff;
+}
+#zoom_img .bodying_second .img img {
+  width: 100%;
+  height: 100%;
+}
+
 #back_to_top button {
   display: flex;
   justify-content: center;
