--- a/src/scss/pages/productcheck/_productcheck.scss
+++ b/src/scss/pages/productcheck/_productcheck.scss
@@ -15,6 +15,320 @@ margin-bottom: 20px;
                     object-fit: cover;
                 }
             }
+            .check_addtocart{
+                h3{
+
+                }
+            }
+            .check_addtocart{
+                @include _main($display:flex , $padding:0 0 0 20px  );
+                flex-direction: column;
+                gap: 22px;
+                 .content{
+                    h3{
+                        margin: 5px 0;
+                    }
+                    span{
+                        color: #a1a1a1;
+                    }
+                 }
+                 .info_add{
+                    @include _main($display:flex);
+                    flex-direction: column;
+                    gap: 15px;
+                    p{
+                        color: #767676;
+                        font-size: 14px;
+                        @media (max-width:500px) {
+                            font-size: 12px;
+                        }
+                    }
+                    form{
+                        @include _main($display:flex );
+                        flex-direction: row;
+                        
+                    #quantity{
+                        width: 36%;
+                        outline: none;
+                        padding: 12px;
+                        font-size: 12px;
+                        border: 1px solid #eaeaea;
+                    }
+                    #minus{
+                        @include _main($border:1px solid transparent ,$color:black , $display:flex , $align_it:center , $just_content:center , $width:4%, $padding:12px );
+                        outline: none;
+                    }
+                    #plus{
+                        @include _main($border:1px solid transparent ,$color:black , $display:flex , $align_it:center , $just_content:center , $width:4%, $padding:12px );
+                        outline: none;
+                    }
+                    #value{
+                        width: 10%;
+                        outline: none;
+                        padding: 12px;
+                        text-align: center;
+                        border: 1px solid #eaeaea; 
+        
+                        @media (max-width:412px) {
+                            width: 14%;
+                        }
+                    }
+                    #add_car_info{
+                        border: 1px solid black;
+                        background-color: black;
+                        color: white;
+                        width: 37%;
+                        transition: .3s ease-in-out;
+                        &:hover{
+                            background-color: rgba(0, 0, 0, 0.851);
+                        }
+                    }
+                }
+                 }
+                 .list_about{
+                    @include _main($display:flex , );
+                    flex-direction: column;
+                    gap: 17px;
+                    ul{
+                        @include _main( $margin:0px , $padding:0px);
+                        list-style-type: none;
+                        li{
+                            list-style: none;
+                            color: #696969;
+                            font-size: 12px;
+                            line-height: 32px;
+                        }
+                  }
+                 }
+              }
+}
+#elementor{
+    .header{
+        @include _main( $margin:0px , $padding:0px , $display:flex ,);
+        list-style-type: none;
+        width: 61%;
+        flex-wrap: wrap;
+        .filterbtn{
+            list-style: none;
+            color: #696969;
+            font-size: 14px;
+            border: 1px solid #d8d8d8;
+            padding: 15px 30px 15px 30px;
+            cursor: pointer;
+            text-decoration: none;
+            @media (max-width:769px) {
+                padding: 10px 21px 10px 21px;
+            }
+            @media (max-width:380px) {
+               font-size: 11px;  
+            }
+        }
+        .filter_btnactive{
+            color: white;
+                background: #f34f3f;
+        }
+
+    }
+
+    // .border-top{
+    //     width: 100%;
+    //     height: 285px;
+    //     overflow: hidden;
+    // }
+    
+    .describtion_filter{
+        display: block;
+
+        padding: 70px 0;
+        h2{
+            font-size: 30px;
+                color: black;
+                font-weight: 400;
+                @media (max-width:700px) {
+                    font-size: 27px;
+                }
+                @media (max-width:400px) {
+                    font-size: 23px;
+                }
+        }
+        p{
+            color: #565656;
+            font-size: 14px;
+            margin: 22px 0;
+            @media (max-width:700px) {
+                font-size: 12px;
+            }
+            @media (max-width:400px) {
+                font-size: 10px;
+            }
+        }
+    }    
+    .add_info{
+        display: block;
+
+        padding: 70px 0;
+        .first_state{
+            @include _main($display:flex , $align_it:center , $margin:20px 0);
+            flex-direction: row;
+            gap: 20px;
+            p{
+              font-weight: 500;
+                font-size: 14px;
+                color: black;
+                margin: 0;
+
+            }
+            span{
+                color: #767676;
+                font-size: 12px;   
+            }
+        }
+    }
+    .reviews{
+
+        padding: 70px 0;
+        display: block;
+          .reviewers{
+            @include _main($display:flex , $width:100% , $margin:20px 0 );
+            flex-direction: row;
+            .left_side{
+                @include _main( $width:71px );
+                img{
+                    @include _main( $width:71px , $height: 70px , $object_f:contain );
+                }
+            }
+            .right_side{
+                @include _main( $width:91% , $display:flex,$padding:0 0 0 13px, $just_content:space-between);
+                flex-direction: column;
+                gap: 10px;
+
+                .up_right_side{
+                    @include _main($display:flex, $align_it:center  );
+                    flex-direction: row; 
+                    gap: 13px;     
+                    p{
+                        font-size: 12px;
+                        color: black;
+                        margin: 0;
+                    }
+                    span{
+                        font-size: 10px;
+                        color: #a1a1a1;
+                    }
+                }
+                .down_right_side{
+                    p{
+                        font-size: 14px;
+                        color: black;
+                        @media (max-width:600px) {
+                            font-size: 11px;
+                        }
+                        @media (max-width:500px) {
+                            font-size: 9px;
+                        }
+                    }
+                }
+            }
+          }
+          #review_write{
+            width: 100%;
+            margin-top: 10px;
+            border: 1px solid #eaeaea;
+            padding: 10px;
+          }
+          label{
+            margin: 18px 0 5px 0;         
+             }
+          input{
+            width: 100%;
+            padding: 14px;
+            border: 1px solid #eaeaea;
+            &:focus{
+                border: 1px solid black;
+            }
+          }
+          #sub_btn{
+            width: 15%;
+            margin-top: 30px;
+            background-color: #f34f3f;
+            color: white;
+            outline: none;
+            padding: 15px;
+            border: 1px solid transparent;
+            @media (max-width:769px) {
+                width: 30%;
+                
+            }
+          }
+    }
+}
+#product_cards{
+    .product_cards{
+
+            .column {
+                display: none;
+                .content {
+                  text-align: center;
+                  background-color: white;
+                  padding: 10px;
+                  &:hover {
+                    .card_price {
+                      #price {
+                        transform: translateX(0px);
+                        opacity: 0;
+                      }
+                      #addcart {
+                        transform: translateX(10px);
+                        opacity: 1;
+                      }
+                    }
+                  }
+                  img {
+                    width: 100%;
+                    height: 320px;
+                    object-fit: cover;
+                    object-position: center;
+                    transition: 0.3s ease-in-out;
+                    &:hover {
+                      transform: scale(1.03);
+                    }
+                  }
+                  h4 {
+                    font-size: 12px;
+                    color: $black-txtcolor;
+                    font-family: $font-Mont;
+                    margin-top: 20px;
+                  }
+                  .card_price {
+                    display: flex;
+                    justify-content: center;
+                    #price {
+                      color: $lightgray-txtcolor;
+                      font-size: 12px;
+                      font-family: $font-Mont;
+                      transition: 0.2s ease-in-out;
+                      transform: translateX(-35px);
+                    }
+                    #addcart {
+                      transition: 0.2s ease-in-out;
+                      opacity: 0;
+                      transform: translateX(-50px);
+                      color: $lightgray-txtcolor;
+                      font-size: 12px;
+                      font-family: $font-Mont;
+                      cursor: pointer;
+                      &:hover {
+                        color: $orange-color;
+                      }
+                    }
+                  }
+                }
+              }
+              .show {
+                display: block;
+              }
+        
+    }
 }
 #zoom_img{
 .bodying{
