--- a/src/scss/pages/productcheck/_productcheck.scss
+++ b/src/scss/pages/productcheck/_productcheck.scss
@@ -135,7 +135,7 @@ margin-bottom: 20px;
     //     height: 285px;
     //     overflow: hidden;
     // }
-    
+
     .describtion_filter{
         display: block;
 
@@ -263,6 +263,15 @@ margin-bottom: 20px;
     }
 }
 #product_cards{
+    h4{
+        color: #1b1b1b;
+    font-family: Montserrat;
+    font-size: 12px;
+    line-height: 2em;
+    font-weight: 500;
+    letter-spacing: .1em;
+    text-transform: uppercase;
+    }
     .product_cards{
 
             .column {
