--- a/src/scss/style.css
+++ b/src/scss/style.css
@@ -2124,6 +2124,15 @@ header .navbaractive {
   }
 }
 
+#product_cards h4 {
+  color: #1b1b1b;
+  font-family: Montserrat;
+  font-size: 12px;
+  line-height: 2em;
+  font-weight: 500;
+  letter-spacing: 0.1em;
+  text-transform: uppercase;
+}
 #product_cards .product_cards .column {
   display: none;
 }
